// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDatabaseTableQuery hook > applies query function to table 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Table: _ReferencedSettingsTable",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseTableQuery hook > async query function on table 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Async table: _ReferencedSettingsTable",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseTableQuery hook > complex table query transformation 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "hasDefaultMethod": true,
      "hasGetMethod": true,
      "tableInfo": "settings-table-metadata",
      "tableName": "_ReferencedSettingsTable",
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseTableQuery hook > manual refetch functionality 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasRefetched": false,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Refetch test: _ReferencedSettingsTable",
    "error": null,
    "hasRefetched": false,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Refetch test: _ReferencedSettingsTable",
    "error": null,
    "hasRefetched": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Refetch test: _ReferencedSettingsTable",
    "error": null,
    "hasRefetched": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseTableQuery hook > query function changes dynamically 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
    "version": 1,
  },
  {
    "data": "v1-_ReferencedSettingsTable",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
    "version": 1,
  },
  {
    "data": "v1-_ReferencedSettingsTable",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
    "version": 2,
  },
]
`;

exports[`useDatabaseTableQuery hook > subscription updates with table processing 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasSetData": false,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Processed: _ReferencedSettingsTable",
    "error": null,
    "hasSetData": false,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Processed: _ReferencedSettingsTable",
    "error": null,
    "hasSetData": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "manually-set-table-data",
    "error": null,
    "hasSetData": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;
